vendor/github.com/richardlehane/webarchive/examples/jhove/valid/valid-warcfile-fields-continuation.warc
WARC/0.17
WARC-Type: 
 continuation
WARC-Target-URI: 
 http://www.archive.org/
WARC-Date: 
 2008-04-30T20:48:26Z
WARC-Block-Digest: 
 sha1:DOJRBNCFHBFA6HJ4IW4Q4I2G2YELY46X
WARC-Record-ID: 
 <urn:uuid:4042c21b-d898-43f0-9c95-b50da2d1aa42>
WARC-Warcinfo-ID: 
 <urn:uuid:4042c21b-d898-43f0-9c95-b50da2d1aa42>
WARC-Identified-Payload-Type:
 application/fluf
WARC-Segment-Number: 
 42
WARC-Segment-Total-Length: 
 1234
WARC-Segment-Origin-ID: 
 <urn:uuid:ff728363-2d5f-4f5f-b832-9552de1a6037>
Content-Length: 
 693
WARC-Truncated: 
 length

HTTP/1.1 200 OK
Date: Wed, 30 Apr 2008 20:48:25 GMT
Server: Apache/2.0.54 (Ubuntu) PHP/5.0.5-2ubuntu1.4 mod_ssl/2.0.54 OpenSSL/0.9.7g
Last-Modified: Wed, 09 Jan 2008 23:18:29 GMT
ETag: "47ac-16e-4f9e5b40"
Accept-Ranges: bytes
Content-Length: 366
Connection: close
Content-Type: text/html; charset=UTF-8

<html>
<head>
<meta http-equiv="Refresh" content="0;URL=http://www.archive.org/index.php"/>
<script>
document.location="http://www.archive.org/index.php";
</script>
</head>
<body>
<img width="70" height="56" src="http://www.archive.org/images/logoc.jpg"/><br/>
Please visit our website at:
<a href="http://www.archive.org">http://www.archive.org</a>
</body>
</html>


